<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.zerotreedelta</groupId>
	<artifactId>garmin-conversion-service</artifactId>
	<version>1.0</version>
	<packaging>jar</packaging>
	<name>garmin-conversion-service</name>

	<properties>
		<newrelic.version>4.7.0</newrelic.version>
		<maven-dependency-plugin.version>3.1.1</maven-dependency-plugin.version>
		<versions-maven-plugin.version>2.5</versions-maven-plugin.version>
		<buildToken>BUILD${bamboo_buildNumber}</buildToken>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<docker.image.prefix>804777715682.dkr.ecr.us-east-1.amazonaws.com</docker.image.prefix>
		<java.version>10</java.version>
	</properties>

	<distributionManagement>
		<repository>
			<id>digital-releases</id>
			<name>LMB Release Repository</name>
			<url>
                https://tools.digital.lincolnfinancial.codes/artifactory/java/
            </url>
		</repository>

		<snapshotRepository>
			<id>digital-snapshots</id>
			<name>LMB Snapshot Repository</name>
			<url>
                https://tools.digital.lincolnfinancial.codes/artifactory/java/
            </url>
		</snapshotRepository>
	</distributionManagement>


	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.0.6.RELEASE</version>
	</parent>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-hateoas</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>4.5</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- <dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk</artifactId>
			<version>1.11.440</version>
		</dependency>-->
		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time</artifactId>
			<version>2.9.9</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
	</dependencies>

	<build>
		<finalName>garmin-conversion-service</finalName>

		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>${versions-maven-plugin.version}</version>
				<configuration>
					<newVersion>${buildToken}</newVersion>
				</configuration>
			</plugin>



			<plugin>
				<groupId>com.spotify</groupId>
				<artifactId>docker-maven-plugin</artifactId>
				<version>1.2.0</version>

				<executions>
					<execution>
						<goals>
							<goal>build</goal>
						</goals>
					</execution>
				</executions>

				<dependencies>
					<dependency>
						<groupId>javax.activation</groupId>
						<artifactId>activation</artifactId>
						<version>1.1.1</version>
					</dependency>
				</dependencies>

				<configuration>
					<imageName>gcr.io/garmin-conversion/${project.artifactId}:BUILD2</imageName>
					<dockerDirectory>src/main/docker</dockerDirectory>
					<resources>
						<resource>
							<targetPath>/</targetPath>
							<directory>${project.build.directory}</directory>
							<include>${project.build.finalName}.jar</include>
						</resource>
					</resources>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>

			<!-- <plugin> <groupId>com.spotify</groupId> <artifactId>dockerfile-maven-plugin</artifactId> 
				<version>1.3.6</version> <executions> <execution> <goals> <goal>build</goal> 
				</goals> </execution> </executions> <dependencies> <dependency> <groupId>javax.activation</groupId> 
				<artifactId>activation</artifactId> <version>1.1.1</version> </dependency> 
				</dependencies> <configuration> <repository>${docker.image.prefix}/${project.artifactId}</repository> 
				<tag>${project.version}</tag> <contextDirectory>src/main/docker</contextDirectory> 
				<buildArgs> <JAR_FILE>${project.build.finalName}.${project.packaging}</JAR_FILE> 
				</buildArgs> </configuration> </plugin> -->

		</plugins>
	</build>

</project>
